@@ -3,6 +3,7 @@
 * Removed empty SimulatedSystemActions.
 * Fixed small error.
 * Switched to spaces indentation.
+* Added exception handling to main functions.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
